# suii_vision_3d

./: .gitignore  LICENSE  README.md
docs/: .~lock.Logbook.xlsx#  .~lock.Research_progress.odt#  .~lock.Research_progress_Mark.odt#  .~lock.Test_execution.odt#  .~lock.Test_plan.odt#  3D_vision_class_diagram(2).drawio  3D_vision_class_diagram_v2.drawio  3D_vision_class_diagram_v3.drawio  3D_vision_class_diagram_v4(1).drawio  3D_vision_class_diagram_v5(2).drawio  3D_vision_class_diagram_v5(3).drawio  3D_vision_class_diagram_v6.drawio  3D_vision_class_diagram_v7.drawio  3D_vision_class_diagram_v8.drawio  3D_vision_class_diagram_v9.drawio  Buildplan.odt  DFDv1.drawio  DFDv2.drawio  Logboek.xlsx  Logbook.xlsx  Notes.odt  ROSdiagram.drawio  Research_progress.odt  Research_progress_Mark.odt  Test_execution.odt  Test_plan.odt  Testing.odt  yolo_setup.odt
pictures/dsampled/: dsampled_axis_2.pcd  dsampled_b20x20.pcd  dsampled_bearing.pcd  dsampled_bearing_2.pcd  dsampled_bearing_box.pcd  dsampled_big_nut.pcd  dsampled_big_nut_2.pcd  dsampled_distance_tube.pcd  dsampled_g20x20.pcd  dsampled_g20x20_2.pcd  dsampled_r20_2.pcd  dsampled_small_nut.pcd  dsampled_small_nut_2.pcd
src/: README.md
src/main/: filter.h  getImages.h  gettf.cpp  img_struct.h  main_backup.cpp  pipeline.cpp  pipeline.h  segmentation.cpp  segmentation.h  tf.cpp  tf_struct.h  vis.h
src_test_folders/filters/: README.md
src_test_folders/filters/filters_downsampling/: CMakeLists.txt  d_sample.cpp
src_test_folders/filters/filters_outlierremoval/: CMakeLists.txt  outlierremoval.cpp
src_test_folders/filters/filters_passthrough/: CMakeLists.txt  pt_filter.cpp
src_test_folders/main/: CMakeLists.txt  filter.cpp  getImages.cpp  gettf.cpp  gettf.h  main.cpp  obj_struct.h  pipeline.cpp  pipeline.h  segmentation.cpp  tf.cpp  tf.h  tf_br_data.h  tf_struct.h  vis.cpp  vis.h
src_test_folders/main_2/: CMakeLists.txt  main.cpp  main.h  pipeline.cpp  viz.cpp
src_test_folders/main_5/: CMakeLists.txt  main.cpp  pipeline.cpp  pipeline.h  vis.cpp  vis.h
src_test_folders/main_6/: CMakeLists.txt  cloud_array.cpp  cloud_array.h  filter.cpp  filter.h  main.cpp  pipeline.cpp  pipeline.h  segmentation.cpp  segmentation.h  tf.cpp  tf.h  tf_struct.h  vis.cpp  vis.h
src_test_folders/object_detection/: README.md
src_test_folders/object_detection/color_pc/: CMakeLists.txt  color_pc.cpp  color_pc_2.cpp  color_pc_3.cpp
src_test_folders/object_detection/roi_pc/: CMakeLists.txt  roi_pc.cpp  roi_pc_2.cpp
src_test_folders/pipeline/: README.md
src_test_folders/pipeline/pipeline_ply_to_pcd/: README.md
src_test_folders/pipeline/ros_pipeline/: CMakeLists.txt  Main.cpp  img_struct.h  pipeline.cpp
src_test_folders/segmentation/: README.md
src_test_folders/segmentation/segmentation_plane_model/: CMakeLists.txt  planar_segmentation.cpp
src_test_folders/tf/: README.md
src_test_folders/visualization/: README.md
(+16 files in other folders)
